<resources>
    <string name="app_name" translatable="false">parcialTp3Ort</string>
    <string name="texto_header">Hi</string>

    <!--  Settings -->
    <string name="main_settings">General</string>
    <string name="notifications">Enable message notifications</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language_selection">Language</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>es</item>
    </string-array>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string-array name="theme_values">
        <item>l</item>
        <item>d</item>
        <item>sd</item>
    </string-array>
    <string name="language_selection_english">English</string>
    <string name="language_selection_spanish">Spanish</string>
    <string name="personal_data">Personal Data</string>
    <string name="email_settings">Email</string>

    <!-- Main -->
    <string name="title_part_1" translatable="false">Premier</string>
    <string name="title_part_2" translatable="false">RentCar</string>
    <string name="make_name_title">Make</string>
    <string name="makeCount" translatable="false">+X</string>
    <string name="title_marcas">Makes</string>
    <string name="brand_description">Make logo</string>
    <string name="usuario_placeHolder">Enter your username</string>

    <!-- Actions -->
    <string name="actions_ok">OK</string>
    <string name="actions_add">Add</string>
    <string name="actions_cancel">Cancel</string>
    <string name="actions_remove">Remove</string>
    <string name="actions_cancel_result">Cancelled</string>

    <!-- Car attributes-->
    <string name="car_model">Car Model</string>
    <string name="car_model_description">The model of the car</string>
    <string name="car_fuel_text">Fuel Type</string>
    <string name="car_drive_text">Gear Type</string>
    <string name="car_year_text">Release Year</string>
    <string name="car_class_text">Class</string>

    <!-- Search -->
    <string name="home">Home</string>
    <string name="cars">Cars</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Sign Out</string>

    <string name="electric_filter">Electric Car Filter</string>
    <string name="suv_filter">SUV Car Filter</string>
    <string name="sport_filter">Sport Car Filter</string>
    <string name="profile_description">The profile picture</string>
    <string name="notifications_description">Notifications icon</string>

    <!-- Login Screen-->
    <string name="email_placeholder">Enter your email</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="password_forgotten">Forgot my password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="title_favs">Your favorites</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="recovery_email_sent">Recovery email was sent</string>
    <string name="recovery_email_error">Failure sending recovery email</string>
    <string name="google_sign_in_auth_error">Unable to login with Google</string>
    <string name="google_sign_in_error">Something went wrong with Google</string>
    <string name="google_sign_in_success">Sign in with Google successful :)</string>
    <string name="email_sign_in_success">Authentication was successful</string>
    <string name="register_success">Account has been created</string>

    <!-- Logout -->
    <string name="logout_prompt">Are you sure you want to sign out?</string>
    <string name="logout_success">Logout was successful</string>

    <!-- Error handling-->
    <string name="password_matching_error">Passwords don\'t match</string>
    <string name="less_than_min_length_error">Fields should be at least %d characters long</string>
    <string name="login_matching_error">Wrong user or password</string>
    <string name="empty_field_error">Empty field</string>
    <string name="error_something_wrong">Something went wrong: %1s</string>

    <!--Camera-->
    <string name="profile_modal_title">Profile picture options</string>
    <string name="profile_picture_change">New image</string>
    <string name="profile_picture_select">Select image from gallery</string>
    <string name="take_photo">Take picture</string>

    <string name="username">Username</string>
    <string name="register">Sign Up</string>

    <!--Category-->
    <string name="category">Category</string>
    <string name="category_sport">Sport</string>
    <string name="category_suv">SUV</string>
    <string name="category_electric">Electric</string>
    <string name="category_filter">Filter</string>
    <string name="category_image_description">Sample car from %1s category</string>

    <!-- Favorites-->
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_add_prompt">Do you wish to add this car to favorites?</string>
    <string name="favorites_delete">Remove from favorites</string>
    <string name="favorites_delete_prompt">Do you wish to remove this car from favorites?</string>
    <string name="favorites_already_added">The car is already a favorite</string>

</resources>