<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="20dp"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/main_settings"
            android:textColor="?attr/colorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/notifications"
                android:textColor="?attr/colorOnSurface" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dark_theme"
                android:textColor="?attr/colorOnSurface" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/languageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/language_selection"
            android:textColor="?attr/colorSecondary" />

        <RadioGroup
            android:id="@+id/languageGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/languageEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_selection_english" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/languageSpanish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_selection_spanish" />
        </RadioGroup>

        <TextView
            android:id="@+id/dataTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/personal_data"
            android:textColor="?attr/colorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_settings"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/email_button"
                app:cardCornerRadius="0dp"
                style="?attr/materialCardViewFilledStyle">

                <TextView
                    android:id="@+id/email_button_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email_placeholder"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>