<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_header_margin_start"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/perfilFragment"
            android:layout_width="@dimen/drawer_profile_picture_size"
            android:layout_height="@dimen/drawer_profile_picture_size"
            android:layout_marginEnd="@dimen/drawer_profile_picture_margin_end"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_description"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_car"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/CircleShape"
            app:shapeAppearanceOverlay="@style/CircleShape"
            tools:layout_editor_absoluteY="22dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawer_text_margin_top"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_header" />

            <TextView
                android:id="@+id/nameUser_headerNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>