<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoryCardBase"
    android:layout_width="match_parent"
    android:layout_height="@dimen/category_height"
    style="@style/CategoryCard"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:shapeAppearanceOverlay="@style/CategoryCard"
    android:padding="@dimen/category_padding"
    android:layout_marginBottom="@dimen/category_margin_bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            android:text="@string/category"
            android:textSize="@dimen/category_font_size"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/default_corner_radius_card_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/categoryImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/category_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoryFilterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_24"
            app:drawableTint="@color/light"
            android:text="@string/category_filter"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/category_filter_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

