<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/carCard"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/carModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/car_model"
                    android:textSize="16sp"
                    app:drawableBottomCompat="@android:drawable/ic_dialog_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/carDriveText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/car_drive_Text"
                        app:drawableLeftCompat="@drawable/icon_park_solid_manual_gear" />

                    <TextView
                        android:id="@+id/carFuelText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_fuel_text"
                        app:drawableLeftCompat="@drawable/fuel_type" />

                    <TextView
                        android:id="@+id/carYearText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_year_text"
                        app:drawableLeftCompat="@drawable/year" />

                    <TextView
                        android:id="@+id/carClassText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/car_class_text"
                        app:drawableLeftCompat="@drawable/fuel_type" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />
</androidx.constraintlayout.widget.ConstraintLayout>