<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:background="@drawable/unsplash_wpvtt0mem00_1_"
    tools:context=".fragments.RegistroUsuarioFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <include
        android:id="@+id/include2"
        layout="@layout/title_proyect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:layout_constraintVertical_bias="0.337">

        <EditText
            android:id="@+id/mail_registro1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@drawable/stylo_bordes_edit_text"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/email_placeholder"
            android:inputType="textPersonName"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_font_size" />

        <EditText
            android:id="@+id/usuario_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@drawable/stylo_bordes_edit_text"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/usuario_placeHolder"
            android:inputType="textPersonName"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_font_size" />

        <EditText
            android:id="@+id/pass_registro1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:background="@drawable/stylo_bordes_edit_text"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:radius="50dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_font_size" />

        <EditText
            android:id="@+id/pass_registro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:background="@drawable/stylo_bordes_edit_text"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:radius="50dp"
            android:textAlignment="center"
            android:textSize="@dimen/login_font_size" />






        <Button
            android:id="@+id/button_registro_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="#212121"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            android:text="@string/login_signin"
            android:textSize="@dimen/login_font_size"
            app:cornerRadius="74sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>